--- a/style.css
+++ b/style.css
@@ -30,12 +30,13 @@ main {
     display: flex;
     margin-top: 4em;
     justify-content: center;
-    gap: 300px;
+    gap: 200px;
     align-items: center;
 }
 
 .main-left {
     display: block;
+    justify-content: center;
 }
 
 .h2-name {
@@ -164,25 +165,38 @@ margin-bottom: 0;
     border-radius: 18px;
 }
 
-@media screen and (max-width: 790px) {
+@media screen and (max-width: 890px) {
+
     .div-projects {
         display: block;
     }
 
     .vini-img {
-        height: 500px;
+        height: 600px;
     }
 
     main {
         display: block;
-        
+        align-items: center;
+        justify-items: center;
     }
+    
+    .main-left, .main-right {
+     text-align: center;
+       margin: 2em auto;
+     }
+
+
     .project-img {
-      
+     
     }
 
+   
+
     .div-projects {
-       
+        display: block;
+        align-items: center;
+        justify-items: center;
     }
 
     .div-card {
