--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
+
 body {
     background: url(img/mapimg.jpg);
-  
 }
+
 
 header {
     margin-top: 1em;
     display: flex;
     justify-content: center;
     gap: 3em;
-    
 }
 
-.vini-strong {
-    color: #2e6aa1;
-}
 .a-header {
     text-decoration: none;
     color: white;
@@ -26,6 +23,10 @@ header {
 
 .a-header:active {
     transition: all ease 0.3s;
+    color: #2e6aa1;
+}
+
+.vini-strong {
     color: #2e6aa1;
 }
 
@@ -42,15 +43,19 @@ main {
     justify-content: center;
 }
 
+.main-right {
+    display: flex;
+}
+
 .h2-name {
-    font-size: 90px;
+    font-size: 50px;
     font-weight: 800;
     font-family: "Viga";
     color: white;
 }
 
 .h3-name {
-    font-family:sans-serif;
+    font-family: sans-serif;
     font-size: 18px;
     color: #2e6aa1;
 }
@@ -71,94 +76,34 @@ main {
     border-radius: 18px;
 }
 
-.main-right {
-display: flex;
-}
-
 .vini-img {
     border-radius: 18px;
-    width: 600px;
+    width:600px;
     height: 600px;
-    
 }
 
 h2, h3, p {
-  margin-top: 0;
-  margin-bottom: 10px; /* valor fixo que NÃO muda com a fonte */
+    margin-top: 0;
+    margin-bottom: 10px;
 }
+
 
 .hr-skills {
     border: 1px solid #2e6aa1;
-    margin: 4.5em;
+    margin: 2.5em;
 }
 
 .h2-skills {
-color: white;
-font-size: 30px;
-font-family: "Viga";
-font-weight: 300;
-text-align: center;
+    color: white;
+    font-size: 30px;
+    font-family: "Viga";
+    font-weight: 300;
+    text-align: center;
 }
 
 .p-skills {
     color: white;
     text-align: center;
-}
-
-.div-projects {
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-}
-
-.div-card {
-    display: flex;
-    flex-direction: column;
-    background-color:black;
-    border: 3px solid #2e6aa1;
-    border-radius: 18px;
-    text-align: center;
-    justify-content: center;
-    max-width: 500px;
-    gap: 30px;
-    padding: 10px;
-}
-
-.p-projects {
-    font-family: "Viga";
-    color: white;
-}
-
-.card-title {
-color: white;
-margin-top: 20px;
-margin-bottom: 0;
-
-}
-
-.icon-card {
-    width: 40px;
-    background-color: #2e6aa1;
-    border: 1px solid white;
-    border-radius: 4px;
-}
-
-.project-img {
-   height: 300px;
-}
-
-.p-alura {
-    color: rgb(116, 116, 116);
-}
-
-.a-project {
-   text-decoration: none;
-    background-color: #2e6aa1;
-    color:black;
-    font-weight: 900;
-    padding: 0.8em 2em;
-    border: 4px solid #2e6aa1;
-    border-radius: 18px;
 }
 
 .ul-skills {
@@ -189,7 +134,64 @@ margin-bottom: 0;
     transform: scale(1.1);
 }
 
-.section-about  {
+
+.div-projects {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.div-card {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    border: 3px solid #2e6aa1;
+    border-radius: 18px;
+    text-align: center;
+    justify-content: center;
+    max-width: 500px;
+    gap: 30px;
+    padding: 10px;
+}
+
+.card-title {
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+.p-projects {
+    font-family: "Viga";
+    color: white;
+}
+
+.icon-card {
+    width: 40px;
+    background-color: #2e6aa1;
+    border: 1px solid white;
+    border-radius: 4px;
+}
+
+.project-img {
+    height: 300px;
+}
+
+.p-alura {
+    color: rgb(116, 116, 116);
+}
+
+.a-project {
+    text-decoration: none;
+    background-color: #2e6aa1;
+    color: black;
+    font-weight: 900;
+    padding: 0.8em 2em;
+    border: 4px solid #2e6aa1;
+    border-radius: 18px;
+}
+
+
+.section-about {
     margin-top: 2em;
     display: flex;
     align-items: center;
@@ -198,24 +200,21 @@ margin-bottom: 0;
 }
 
 .div-about {
-justify-content: center;
-border: 5px solid #2e6aa1;
-border-radius: 12px;
-padding: 10px;
+    justify-content: center;
+    border: 5px solid #2e6aa1;
+    border-radius: 12px;
+    padding: 10px;
 }
-
-
 
 .div-img {
     justify-content: center;
-    
 }
 
 .img-about {
-height: 500px;
-width: 500px;
-border-radius: 12px;
-border: 2px solid white;
+    height: 500px;
+    width: 500px;
+    border-radius: 12px;
+    border: 2px solid white;
 }
 
 .h2-about {
@@ -225,18 +224,6 @@ border: 2px solid white;
     font-family: "Viga";
 }
 
-footer {
-text-align: center;
-margin-top: 2em;
-
-}
-
-.ancora-footer {
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-    margin: 8px;
-}
 
 .div-bigText {
     margin-top: 5em;
@@ -244,11 +231,10 @@ margin-top: 2em;
     padding: 15px;
     text-align: center;
     border-radius: 12px;
-    width:75%;
+    width: 75%;
     justify-content: center;
     align-items: center;
-     margin: 30px auto;     
-
+    margin: 30px auto;
 }
 
 .bigText {
@@ -262,6 +248,7 @@ margin-top: 2em;
 .strong-name {
     color: #2e6aa1;
 }
+
 
 .div-contact {
     display: flex;
@@ -279,7 +266,6 @@ margin-top: 2em;
     border: white;
     border-radius: 12px;
 }
-
 
 .contact-box {
     background-color: white;
@@ -300,14 +286,30 @@ margin-top: 2em;
     color: #2e6aa1;
 }
 
+
+footer {
+    text-align: center;
+    margin-top: 2em;
+}
+
+.ancora-footer {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    margin: 8px;
+}
+
 @media screen and (max-width: 890px) {
 
     .div-projects {
         display: block;
+        align-items: center;
+        justify-items: center;
     }
 
     .vini-img {
-        height: 600px;
+        width: 300px;
+        height: 400px;
     }
 
     main {
@@ -315,39 +317,25 @@ margin-top: 2em;
         align-items: center;
         justify-items: center;
     }
-    
+
     .main-left, .main-right {
-     text-align: center;
-       margin: 2em auto;
-     }
-
-
-    .project-img {
-     
+        text-align: center;
+        margin: 2em auto;
     }
 
     .ul-skills {
         display: flex;
         flex-direction: column;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
         gap: 1em;
     }
 
     .li-skills {
-        width: 100%;
-    }
-   
-
-    .div-projects {
-        display: block;
-        align-items: center;
-        justify-items: center;
+        width: 80%;
+        margin: -10px;
     }
 
     .div-card {
-        max-width: 400px;
+        max-width: 370px;
     }
 
     .section-about {
@@ -362,17 +350,18 @@ margin-top: 2em;
 
     .img-about {
         width: fit-content;
-       
     }
 }
 
+@media (max-width: 1000px) {
+    body {
+        max-width: 600px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
 
-@media (max-width: 1600px) {
-  body {
-    max-width: 600px;
-  }
-
-  .section-about {
-    display: flex;
-  }
+    .section-about {
+        display: flex;
+    }
 }
