--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ main {
     border-radius: 18px;
     width:600px;
     height: 600px;
+    justify-content: center;
 }
 
 h2, h3, p {
@@ -213,6 +214,7 @@ h2, h3, p {
 .img-about {
     height: 500px;
     width: 500px;
+    margin: 0 auto;
     border-radius: 12px;
     border: 2px solid white;
 }
@@ -308,8 +310,9 @@ footer {
     }
 
     .vini-img {
-        width: 300px;
+        width: 100%;
         height: 400px;
+        margin: 0 auto;
     }
 
     main {
